# soft-t-ue

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE.md  README.md  ru_emulation.md  toc.md
.github/workflows/: main.yml
configs/: basic_ue_uhd.yaml  basic_ue_zmq.yaml  gnb_zmq.yaml  multi_ue_zmq.yaml  ue1_zmq.conf  ue2_zmq.conf
configs/uhd/: gnb_uhd.yaml  ue_uhd.conf
configs/zmq/: gnb_zmq.yaml  ue_zmq.conf  ue_zmq_b.conf  ue_zmq_docker.conf
controller/: Dockerfile  captured_packets.pcap  controller.py  gnb_interface.py  pcap_decode.py  pyproject.toml  ue_interface.py  visualize.py
controller/common/: Iperf.py  Ping.py  iperf_interface.py  pcap_decode.py  ping_interface.py  utils.py
controller/gnb/: CoreNetwork.py  Gnb.py  GnuRadio.py  main.py  (+6 more)
docker/: .env  Dockerfile  docker-compose.yml
docker/controller/: Dockerfile  pyproject.toml
docker/controller/configs/: baremetal_zmq_testing.yaml  basic_ue_uhd.yaml  basic_ue_zmq.yaml  jammer.yaml  multi_ue_zmq.yaml
docker/controller/configs/uhd/: ue_uhd.conf
docker/controller/configs/zmq/: gnb_zmq_docker.yaml  ue_zmq.conf
docker/controller/src/: ChannelAgent.py  Config.py  Iperf.py  LandingPage.py  MainApp.py  Metrics.py  MetricsClient.py  Ping.py  ProcessesPage.py  Ue.py  \  main.py  notes.md  utils.py
docker/controller/src/configs/: basic_ue_zmq.yaml
docker/controller/src/configs/zmq/: ue_zmq.conf
docs/: Running_the_Security_Test.md  UE.md  conf.py  csi.md  development.md  gNB.md  index.rst  installation-guide.md  introduction.md  message_types.md  multi-ue.md  papers.md  preamble_collision.rst  rach_notes.md  rach_replay.rst  requirements.txt  rrc_messages.md  ru_emulation.md  traffic.md  useful_links.md  zmq-install.md
gnb-controller/: pyproject.toml
gnb-controller/gnb_controller/: core_interface.py  gnb.py  gnb_interface.py  iperf_interface.py  utils.py
gnb-controller/tests/: test_gnb_controller.py
pcap_testing/: pyproject.toml
pcap_testing/pcap_testing/: NR-RRC-Definitions.asn  utils.py
scripts/: headless-test.sh  install-gnb.sh  install-open5gs.sh  install-ue-gnb.sh  install-ue.sh  run-gnb.sh  run-ue.sh
ue-controller/: pyproject.toml
ue-controller/ue_controller/: gnb_interface.py  iperf_interface.py  pcap_decode.py  ue_interface.py  ue_mac_nr.pcap  ui.py  utils.py  visualize.py
(+156 files in other folders)
