[tool.poetry]
name = "pcap-testing"
version = "0.1.0"
description = ""
authors = ["Charles Ueltschey <chaseuelt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scapy = "^2.5.0"
asn1tools = "^0.167.0"
pyx = "^0.16"
pillow = "^10.4.0"
hexdump = "^3.3"
tex = "^1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
