[tool.poetry]
name = "ue-controller"
version = "0.1.0"
description = ""
authors = ["Charles Ueltschey <chaseuelt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scapy = "^2.5.0"
pyx = "^0.16"
pillow = "^10.4.0"
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
