[tool.poetry]
name = "ue"
version = "0.1.0"
description = ""
authors = ["Charles Ueltschey <chaseuelt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.2"
pathlib = "^1.0.1"
argparse = "^1.4.0"
uuid = "^1.30"
Kivy = "^2.3.0"
"kivy-garden.graph" = "^0.4.0"
python-dotenv = "^1.0.1"
influxdb-client = "^1.46.0"
psutil = "^6.0.0"
docker = "^7.1.0"
mypy = "^1.13.0"
websockets = "^14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
